# rapidonvif

./: .gitignore  CMakeLists.txt  Makefile  Readme  Readme.md  rules-arm.mk  rules-macos.mk  rules.mk
cmake_modules/: c_cxx_rt_config.cmake
example/client/onvifclientwin32/: onvifclient.cpp  onvifclient.vcxproj
gsoap/gsoap/runtime/: dom.cpp  duration.c  duration.h  smdevp.c  smdevp.h  threads.c  threads.h  wsaapi.c  wsaapi.h  wsseapi.cpp  wsseapi.h
include/: onvifclient.hpp  onvifclientdevice.hpp  onvifclientevent.hpp  onvifclientimaging.hpp  onvifclientmedia.hpp  onvifclientptz.hpp  onvifclientreceiver.hpp  onvifclientrecording.hpp  onvifclientremotediscovery.hpp  onvifclientreplay.hpp  onvifclientsearch.hpp  onvifserver.hpp  onvifserverdevice.hpp  onvifserverevent.hpp
onvif/: CMakeLists.txt  Makefile
onvif/doc/: rapidonvif.pptx  rapidonvif.xml
onvif/example/onvifagentcliwin32/: onvifagentcli.cpp  onvifagentcli.vcxproj
onvif/include/: basepbmsg.hpp  onvifagentc.hpp  onvifagentcli.hpp  onvifagentlib.hpp  onvifcli.pb.cc  onvifcli.pb.h  onvifclidevice.pb.cc  onvifclidevice.pb.h  onvifclidis.hpp  onvifcliptz.pb.cc  onvifcliptz.pb.h  onvifdevicec.pb.cc  onvifdevicec.pb.h
onvif/include/proto/: gen.bat  onvifcli.proto  onvifclidevice.proto  onvifcliptz.proto  onvifdevicec.proto  onvifmedia.proto  onvifser.proto
onvif/onvifagent/: Makefile
onvif/onvifagent/gsoap/gsoap/runtime/: stdsoap2.h
onvif/onvifagent/win32/: onvifagent.vcxproj
onvif/src/: onvifagentlib.cpp
onvif/src/tinyprocess/: process_win.cpp
onvifgen/: ReplayBinding.nsmap  nsmap.cpp  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceBindingService.cpp  soapDeviceBindingService.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapDeviceIOBindingService.cpp  soapDeviceIOBindingService.h  soapDisplayBindingProxy.cpp  soapDisplayBindingProxy.h  soapDisplayBindingService.cpp  soapDisplayBindingService.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapImagingBindingService.cpp  soapImagingBindingService.h  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapMediaBindingService.cpp  soapMediaBindingService.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPTZBindingService.cpp  soapPTZBindingService.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapPullPointSubscriptionBindingService.cpp  soapPullPointSubscriptionBindingService.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapReceiverBindingService.cpp  soapReceiverBindingService.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapRecordingBindingService.cpp  soapRecordingBindingService.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  (+15 more)
script/: gsoap_onvif_complier_win32_01.bat  gsoap_onvif_complier_win32_02.bat  onvif.h  readme.txt
win32/: onvifcpplib.sln  onvifcpplib.vcxproj  onvifcpplib.vcxproj.filters
